# Kolizei_API

./: .gitignore  README.md  setup.cfg
kolizei_api/: __init.py__.py  __init__.py  kolizei_api.py
kolizei_api/tests/: test_Kolizei_api.py
tests/: .env  model.env  test_Kolizei_api.py  test_kolizei_api.py
