[metadata]
name = Kolizei API for VK
version = 0.0.1
author = Foxdogface
description = A package to work with Kolizei API for VK.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Foxdogface/Kolizei_API
license = LICENSE.txt
platform = any
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = kolizei_api
packages = find:
python_requires = >=3.6

[options.packages.find]
where = kolizei_api